# kicad-mcp

./: .gitignore  AGENT-INSTALL.md  CLAUDE.md  LICENSE  README.md  TOOLS.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  docs-check.yml
src/kicad_mcp/: __init__.py  config.py  server.py
src/kicad_mcp/tools/: __init__.py  bom.py  drc.py  export.py  netlist.py  patterns.py  pcb_autoroute.py  pcb_board.py  pcb_drc_fix.py  pcb_footprints.py  pcb_keepout.py  pcb_nets.py  pcb_panelize.py  pcb_pipeline.py  pcb_planning.py  pcb_routing.py  pcb_silkscreen.py  pcb_zones.py  project.py  schematic.py
src/kicad_mcp/tools/drc_impl/: cli_drc.py
src/kicad_mcp/utils/: __init__.py  component_utils.py  drc_history.py  file_utils.py  footprint_index.py  keepout_helpers.py  kicad_cli.py  kicad_utils.py  library_index.py  netlist_parser.py  pattern_recognition.py  pcbnew_bridge.py
tests/: conftest.py  test_bom.py  test_component_utils.py  test_drc.py  test_export_thumbnail.py  test_footprint_index.py  test_library_index.py  test_net_class.py  test_netlist_tools.py  test_new_tools.py  test_pad_clearances.py  test_pcb_autoroute.py  test_pcb_board.py  test_pcb_footprints.py  test_pcb_keepout.py  test_pcb_keepout_integration.py  test_pcb_nets_tools.py  test_pcb_planning.py  test_pcb_routing.py  test_pcb_silkscreen.py  test_pcb_zones.py  test_pcbnew_bridge.py  test_project.py  test_schematic.py  test_search_components.py  test_server.py
